# MoveSemantics

./: CMakeLists.txt  Pract02.cpp  Student.cpp  Student.h  Subject.cpp  Subject.h
Boost_tests/: CMakeLists.txt  foundGradesTest.cpp
Pract/: BoostTest.cpp  CMakeLists.txt  Pract02.cpp
Pract/Include/: Student.h
